--- a/CST116SRS02/CST116SRS02.vcxproj
+++ b/CST116SRS02/CST116SRS02.vcxproj
@@ -150,7 +150,8 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="CST116SRS02.cpp" />
+    <ClCompile Include="input.cpp" />
+    <ClCompile Include="output.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
